--- a/.travis.yml
+++ b/.travis.yml
@@ -1,24 +1,17 @@
-dist: trusty
-sudo: enabled
+dist: xenial
 language: python
 python:
   - "2.7"
+  - "3.4"
   - "3.5"
   - "3.6"
+  - "3.7"
 
-notifications:
-  email: false
-
-# command to install dependencies
 install:
-  - pip install flake8
-  - pip install PyYAML argparse rospkg catkin_pkg
-  - sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 421C365BD9FF1F717815A3895523BAEEB01FA116
-  - sudo sh -c 'echo "deb http://packages.ros.org/ros/ubuntu trusty main" > /etc/apt/sources.list.d/ros-latest.list'
-  - sudo apt-get update
-  - sudo apt-get install dpkg  # work-around for https://github.com/travis-ci/travis-ci/issues/9361
-  - sudo apt-get install ros-indigo-catkin ros-indigo-roslaunch ros-indigo-rostest ros-indigo-roslint
-  - source /opt/ros/indigo/setup.bash
+  # install testing dependencies
+  - pip install flake8 pyyaml pytest
+  # install this package (xacro)
+  - pip install .
 
 before_script:
   # stop the build if there are Python syntax errors or undefined names
@@ -28,11 +21,4 @@ before_script:
 
 # command to run tests
 script:
-  - export PYTHONPATH=`pwd`/src:$PYTHONPATH
-  - mkdir build
-  - cd build
-  - cmake -DCMAKE_BUILD_TYPE=Release -DSETUPTOOLS_DEB_LAYOUT=OFF ..
-  - make
-  - make run_tests
-  - catkin_test_results --all ./
-  - sudo make install
+  - pytest tests
